# Duck-ToolBox

./: .gitattributes  .gitignore  LICENSE  README.md  customize.sh  module.prop  service.sh
.github/workflows/: ci.yml
.github/workflows/scripts/: telegram.py
duckd/: Cargo.toml  rust-toolchain.toml
duckd/.cargo/: config.toml
duckd/src/: lib.rs  main.rs
duckd/src/cli/: args.rs  dispatch.rs  keybox_output.rs  mod.rs
duckd/src/features/: mod.rs
duckd/src/features/device_ids/: mod.rs
duckd/src/features/rkp/: cbor.rs  cose_dice.rs  crypto_kdf.rs  http.rs  keybox_xml.rs  mod.rs  verify.rs
duckd/src/runtime/: errors.rs  files.rs  json_api.rs  mod.rs  paths.rs  profile.rs
duckd/src/shared/: mod.rs
duckd/src/shared/android_xml/: abx.rs  mod.rs  tests.rs
duckd/tests/: cli_json.rs
module/: customize.sh  service.sh  util_functions.sh
scripts/: build.ps1  package-module.ps1
ui/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
ui/src/: App.vue  kernelsu.d.ts  main.ts  style.css
ui/src/features/device-ids/: DeviceIdsWorkbench.vue  types.ts  useDeviceIdsWorkbench.ts
ui/src/features/rkp/: RkpWorkbench.vue  profileChoices.ts  profileState.ts  types.ts  useRkpWorkbench.ts
ui/src/features/shared/: AboutCard.vue  ArtifactsPanel.vue  ChoiceDialog.vue  CommandLogPanel.vue  NoticeDialog.vue  TextPreviewDialog.vue
ui/src/features/toolbox/: ToolLibrary.vue  ToolboxApp.vue  ToolboxHome.vue
ui/src/i18n/: index.ts
ui/src/lib/: bridge.ts  meta.ts  theme.ts  types.ts
ui/src/styles/: about.css  branding.css  dialog.css  responsive.css  rkp.css
(+7 files in other folders)
