[package]
name = "duckd"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
aes-gcm = "0.10.3"
base64ct = { version = "1.8.3", features = ["alloc"] }
ciborium = "0.2.2"
clap = { version = "4.6.0", features = ["derive"] }
cmac = "0.7.2"
coset = "0.4.2"
ed25519-dalek = "2.2.0"
hex = "0.4.3"
hkdf = "0.12.4"
getrandom = "0.3.4"
libloading = "0.8.9"
p256 = { version = "0.13.2", features = ["arithmetic", "ecdh", "ecdsa", "pem", "pkcs8"] }
p384 = { version = "0.13.1", features = ["ecdsa"] }
quick-xml = "0.39.2"
rand_core = "0.10.0"
reqwest = { version = "0.13.2", default-features = false, features = ["http2", "rustls"] }
rustls = { version = "0.23.37", default-features = false, features = ["aws_lc_rs", "std", "tls12"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread"] }
toml = "1.1.0"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["fmt"] }
webpki-roots = "1.0.3"
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }
x509-cert = "0.2.5"
zeroize = { version = "1.8.2", features = ["derive"] }
